tests/errors/semantic/non_blocking/UNKNOWN_IMPORT.py
from numpy import invented_func
